# samples

./: CONTRIBUTORS.md  README.md
02-samples/: README.md
02-samples/04-startup-advisor-mcp/: README.md  complete_startup_advisory_report copy.md  market_research_team.py  writer_team.py
02-samples/11-personal-finance-assistant/: lab1-foundations.ipynb  lab2-memory-integration.ipynb  lab3-multi-agent-orchestration.ipynb  utils.py
02-samples/12-medical-document-processing-assistant/: .env.example  README.md  document_processor.py  main.py  medical_coding_tools.py  requirements.txt
02-samples/13-aws-audit-assistant/: README.md  ai_assistant.py  (+3 more)
03-integrations/: README.md
03-integrations/Amazon-DataProcessing-Agent/: .env.template  README.md  app.py  pyproject.toml
03-integrations/Amazon-DataProcessing-Agent/amazon_dataprocessing_agent/: __init__.py  main.py
03-integrations/Amazon-DataProcessing-Agent/amazon_dataprocessing_agent/config/: __init__.py  constants.py  prompts.py
03-integrations/Amazon-DataProcessing-Agent/amazon_dataprocessing_agent/core/: __init__.py  agent_manager.py  chat_history_manager.py  session_state.py  strands_bedrock_agent.py  streaming_handler.py
03-integrations/Amazon-DataProcessing-Agent/amazon_dataprocessing_agent/tools/: __init__.py  email_tools.py  s3_tables_tools.py  s3_tools.py
03-integrations/Amazon-DataProcessing-Agent/amazon_dataprocessing_agent/ui/: __init__.py  components.py
03-integrations/Amazon-DataProcessing-Agent/amazon_dataprocessing_agent/utils/: __init__.py
04-UX-demos/: README.md
05-agentic-rag/: README.md
(+67 files in other folders)
